--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         });
 
         gtag('js', new Date());
-        gtag('config', 'G-XXXXXXXXXX'); // <-- Reemplaza con tu Measurement ID
+        gtag('config', 'G-89CZZQ679Y'); // <-- Reemplaza con tu Measurement ID
     </script>
 
     <!-- ===== Meta Pixel Code ===== -->
@@ -119,3 +119,4 @@
     </script>
 </body>
 </html>
+
