--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Página de Prueba - Formulario</title>
 
     <!-- ===== Google Tag (GA4) ===== -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-89CZZQ679Y"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -119,4 +119,5 @@
     </script>
 </body>
 </html>
+
 
