--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         function gtag(){dataLayer.push(arguments);}
        // Consent Mode v2 (valores por defecto, ajústalos según tu banner de cookies)
         gtag('consent', 'default', {
-            ad_storage: 'denied',
-            analytics_storage: 'denied',
-            ad_user_data: 'denied',
-            ad_personalization: 'denied',
+            ad_storage: 'granted',
+            analytics_storage: 'granted',
+            ad_user_data: 'granted',
+            ad_personalization: 'granted',
             wait_for_update: 500
         });
 
@@ -119,5 +119,6 @@
     </script>
 </body>
 </html>
+
 
 
